--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Academic Webpage" />
-    <meta name="author" content="Gonghuijie0313" />
+    <meta name="author" content="Gonghuijie" />
     <title id="title"></title>
 
     <!-- Icon -->
