--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@
         </div>
     </section>
     <!-- Experience -->
+    
+    <!-- certifications -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="certifications">
+        <div class="container px-5">
+            <header>
+                <h2 id="certifications-subtitle"> </h2>
+                <!-- <span class="bi bi-list"></span> -->
+            </header>
+            <div class="main-body" id="certifications-md"></div>
+        </div>
+    </section>
+    <!-- certifications -->
 
 
     <!-- Footer-->
