--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
     <!-- Experience -->
     
     <!-- certifications -->
-    <section id="certifications">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="certifications">
         <div class="container px-5">
-          <header>
-            <!-- 添加蓝色加粗标题（和 AWARDS 风格一致） -->
-            <h2 class="text-primary fw-bold"><i class="bi bi-award-fill"></i> CERTIFICATIONS</h2>
-          </header>
-          <div class="main-body" id="certifications-md"></div>
+            <header>
+                <h2 id="certifications-subtitle"><i class="bi bi-briefcase-fill"></i> certifications </h2>
+                <!-- <span class="bi bi-list"></span> -->
+            </header>
+            <div class="main-body" id="certifications-md"></div>
         </div>
-      </section>
+    </section>
     <!-- certifications -->
 
 
