--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#experience">EXPERIENCE</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#certifications">CERTIFICATIONS</a>
+                    </li>
                     
                 </ul>
             </div>
