--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="certifications">
         <div class="container px-5">
             <header>
-                <h2 id="certifications-subtitle"><i class="bi bi-briefcase-fill"></i> certifications </h2>
+                <h2 id="certifications-subtitle"><i class="glyphicon glyphicon-book"></i> certifications </h2>
                 <!-- <span class="bi bi-list"></span> -->
             </header>
             <div class="main-body" id="certifications-md"></div>
