--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
     <!-- Experience -->
 
     <!-- Profile -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="Profile">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="profile">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"></i>PROFILE</h2>
+                <h2 id="profile-subtitle"></i>PROFILE</h2>
             </header>
-            <div class="main-body" id="Profile-md"></div>
+            <div class="main-body" id="profile-md"></div>
 
         </div>
     </section>
