--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="profile">
         <div class="container px-5">
             <header>
-                <h2 id="profile-subtitle"><i class="glyphicon glyphicon-thumbs-up"></i>PROFILE</h2>
+                <h2 id="profile-subtitle"><i class="bi bi-hand-thumbs-up"></i>PROFILE</h2>
             </header>
             <div class="main-body" id="profile-md"></div>
 
